2014-04-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_FreetypeGlyphVector.c:
	Use correct inclusion method, allowing builds with >=2.5.3.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c:
	Likewise.

2014-04-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Fix issues with parallel make.
	* lib/Makefile.am:
	(.PHONY): Remove genclasses; no longer phony.
	(classes): Remove.
	(genclasses): Touch genclasses to mark completion.
	(gen-xpath-parser): Touch gen-xpath-parser to mark
	completion.
	(compile-classes): Depend on genclasses directly.
	(CLEANFILES): Remove gen-xpath-parser and genclasses.

2013-09-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/lang/model/SourceVersion.java:
	(RELEASE_7): New enum value.
	* javax/lang/model/UnknownEntityException.java:
	New exception class.
	(UnknownEntityException(String)): New constructor.
	* javax/lang/model/element/ElementKind.java:
	(RESOURCE_VARIABLE): New enum value.
	* javax/lang/model/element/ExecutableElement.java:
	Extend mixin interface Parameterizable.
	* javax/lang/model/element/PackageElement.java:
	Extend mixin interface QualifiedNameable.
	* javax/lang/model/element/Parameterizable.java:
	New interface.
	(getTypeParameters()): New method.
	* javax/lang/model/element/QualifiedNameable.java:
	New interface.
	(getQualifiedName()): New method.
	* javax/lang/model/element/TypeElement.java:
	Extend mixin interfaces Parameterizable and QualifiedNameable.
	* javax/lang/model/element/UnknownAnnotationValueException.java:
	Extend UnknownEntityException instead of RuntimeException.
	(UnknownAnnotationValueException(AnnotationValue,Object)):
	Call superclass with error message.
	* javax/lang/model/element/UnknownElementException.java:
	Extend UnknownEntityException instead of RuntimeException.
	(UnknownElementException(Element,Object)): End sentence
	with a full stop, not a comma.
	* javax/lang/model/type/MirroredTypeException.java: